FIX : Introduction text not in center on small screen.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,7 +37,7 @@
 }
 
 .text-sand {
-  color: #ff8c00;
+  color: #ff8c00!important;
 }
 
 #main {
@@ -78,12 +78,12 @@
   transition: color 0.3s;
 }
 
-.introduction h6 {
+.introduction h2 {
   text-align: start;
 }
 
 @media (max-width: 768px) {
-  .introduction h6 {
+  .introduction h2 {
     text-align: center;
     margin-top: 20px;
   }
@@ -167,6 +167,7 @@
 }
 
 .slogan {
+  white-space: nowrap;
   color: rgba(240, 215, 179, 0.856);
   font-size: 15vmax;
   z-index: 2;
